--- a/offlineeuro/build.gradle
+++ b/offlineeuro/build.gradle
@@ -52,7 +52,7 @@ android {
 
 dependencies {
     api project(':common')
-
+    implementation "com.auth0:java-jwt:4.2.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
